# ddos-detection

./: .gitattributes  .gitignore  .gitmodules  Dockerfile  LICENSE  docker-compose.yml  pyproject.toml
apache-config/: Dockerfile  httpd-2.2.34.conf  httpd-2.4.63.conf  httpd-status.conf  mod_source_port.c
apache-config/htdocs/: index.html  item.html
attacks/: slowloris.py
dataset/: .gitattributes
dataset/scripts/: generate.py  ip.py  profiles.py  traffic_generator.py
grafana_provisioning/dashboards/: victim.json
ml/: dataset.ipynb  detection.ipynb
prometheus/: prometheus.yml
